# proyecto_mallaPoligonal

./: .gitignore  Apuntes.txt  ArbolKD.h  ArbolKD.hxx  CMakeLists.txt  Grafo.h  Grafo.hxx  ManejadorArchivos.cxx  NodoKD.h  NodoKD.hxx  README.md  Sistema.cxx  TAD Malla Poligonal.txt  arista.cxx  arista.h  cara.cxx  cara.h  figura.cxx  figura.h  funciones.cxx  funciones.hxx  ldglfgfdlgdlgdlgdgldfgdgdgg  main.cpp  malla_poligonal.cxx  malla_poligonal.h  malla_poligonal.hxx  piramide.txt  programa  ter --allow-unrelated-histories  vertice.cxx  vertice.h
include/: ArbolKD.h  ArbolKD.hxx  ManejadorArchivos.h  NodoKD.h  NodoKD.hxx  Sistema.h  cara.h  figura.h  malla_poligonal.h  vertice.h
src/: arista.cxx  cara.cxx  vertice.cxx
